# cpp-stuff

./: CMakeLists.txt  Makefile  docker-compose.yml
src/algorithms/quick_sort/: main.cpp  quick_sort.h  test.cpp
src/algorithms/red_black_tree/: main.cpp  red_black_tree.h  test.cpp
src/algorithms/segmentation_tree/: main.cpp  segmentation_tree.h  test.cpp
src/cmake_demo/: CMakeLists.txt  file1.cpp  main.cpp
src/cmake_demo/include/: calc.h
src/cmake_demo/shared_lib/: shared_lib.cpp
src/cmake_demo/static_lib/: calc.cpp
src/cpp_lang_features/storage/: file1.cpp  main.cpp
src/problems/: animal_transport.cpp  animal_transport.h
src/problems/dynamic_prog_equal/: dynamic_prog_equal.cpp
src/problems/dynamic_prog_kingdom_division/: dynamic_prog_kingdom_division.cpp  dynamic_prog_kingdom_division_dfs.cpp
src/problems/dynamic_prog_max_subarray/: dynamic_prog_max_subarray.cpp
src/problems/mandragora_forest/: mandragora_forest.cpp
src/problems/sherlock_and_cost/: sherlock_and_cost.cpp
